--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
-<body   >
+<body    >
 <div class="container">
   <div class="row clearfix">
 
@@ -20,15 +20,13 @@
       <div >
         <div   th:insert="~{/commom/head}"></div>
         <div class="body1">
-
-
-
-            <div id="menu">
+          <div class="body2">
+            <div id="menu" style="margin-top: 20px">
               <ul>
 
                 <li>
 
-                  <a href="#">前端 	</a>
+                  <a    href="#">前端 	</a>
                   <ul>
                     <li><a href="#">HTML5</a></li>
                     <li><a href="#">CSS</a></li>
@@ -82,9 +80,7 @@
 
 
 
-
-
-
+          </div>
           <div id="myCarousel" class="body3 carousel slide">
             <!-- 轮播（Carousel）指标 -->
             <ol class="carousel-indicators">
@@ -95,15 +91,15 @@
             <!-- 轮播（Carousel）项目 -->
             <div class="carousel-inner " >
               <div class="item active">
-                <img  style="width:800px;height: 300px" src="/images/img_1.png" alt="First slide">
+                <img  style="width:1000px;height: 300px" src="/images/img_1.png" alt="First slide">
 
               </div>
               <div class="item">
-                <img style="width:800px;height: 300px" src="/images/img.png" alt="Second slide">
+                <img style="width:1000px;height: 300px" src="/images/img.png" alt="Second slide">
 
               </div>
               <div class="item">
-                <img  style="width: 800px;height: 300px" src="/images/a1.png" alt="Third slide">
+                <img  style="width: 1000px;height: 300px" src="/images/a1.png" alt="Third slide">
 
               </div>
             </div>
