--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -13,8 +13,8 @@
     display: flex;
     flex-direction: column;
     height: 300px;
-    width: 350px ;
-    background-color: #222222;
+    width: 250px ;
+    background-color: #5e5e5e;
 
 }
 .body3{
@@ -142,55 +142,50 @@
 }
 
 
-
 #menu{
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    width: 350px ;
-    background-color: #222222;
+
 
 
 
 }
 #menu ul{
 
-
+    margin: 0px;
+    padding: 0px;
 
     list-style: none;/* 隐藏默认列表符号*/
 }
 #menu ul li{
     display: flex;
     flex-direction: row;
-    background: #06C;
-    height: 26px;
-    border-bottom: 1px solid #999;
-    width: 120px;
-
+    height: 30px;
+    width: 250px;
+ background-color: #5e5e5e;
 
 }
-a{
-    text-align: center;
+#menu  a{
 
+    text-align: center;
+    position: absolute;
     display: block;
     font-size: 13px;
-    width: 120px;
-    height: 26px;
+    width: 250px;
+    height: 30px;
     color: #FFF;
     text-decoration: none;/*隐藏超廉价默认下划线*/
 }
-a:hover{
+#menu a:hover{
     color:#F00;
     font-size: 14px;
 
 }
 #menu ul li ul{
     display: none;/*默认隐藏*/
-    margin-left: 120px;
+    margin-left: 250px;
 
+    z-index:100;
     width: 100px;
-    border: 1px solid #ccc;
-    border-bottom: none;
+
 
 
 }
