--- a/src/main/resources/templates/admin/AdminBackend.html
+++ b/src/main/resources/templates/admin/AdminBackend.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理员后台首页</title>
+    <title>Title</title>
 </head>
 <body>
-fgusu
 
 </body>
 </html>
